syntax = "proto3";

package reviews;

import "common/basic.proto";
import "common/basic-query.proto";

// Message
message Review {
  string id = 1;
  string interviewId = 2;
  string reviewerId = 3;
  optional int32 rating = 4;
  optional string comment = 5;
  string createdAt = 6;
}

// ---------------------
// CRUD Responses
// ---------------------
message ReviewResponse {
  bool success = 1;
  optional string message = 2;
}

message ListReviewsResponse {
  repeated Review reviews = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message DeleteReviewResponse {
  bool success = 1;
  string message = 2;
}

message AllReviewsWithMetaResponse {
  repeated Review data = 1;
  common.basic.usage.PaginationMeta meta = 2;
}

message SingleReviewResponse {
  optional string message = 1;
  Review review = 2;
}

// ---------------------
// CRUD Requests
// ---------------------
message ListReviewsRequest {
  int32 page = 1;
  int32 limit = 2;
  optional int32 rating = 3;
  optional string reviewerId = 4;
  optional string interviewId = 5;
}

message GetReviewRequest {
  string reviewId = 1;
}

message UpdateReviewRequest {
  string reviewId = 1;
  optional int32 rating = 2;
  optional string comment = 3;
}

message DeleteReviewRequest {
  string reviewId = 1;
}

message GetAllReviewsRequest {
  common.basic.query.BasicQuery basicQuery = 1;
}

message CreateReviewRequest {
  string interviewId = 1;
  string reviewerId = 2;
  optional int32 rating = 3;
  optional string comment = 4;
}

// ---------------------
// CRUD Service
// ---------------------
service ReviewService {
  rpc CreateReview (CreateReviewRequest) returns (ReviewResponse);
  rpc GetReview (GetReviewRequest) returns (SingleReviewResponse);
  rpc GetAllReviews (GetAllReviewsRequest) returns (AllReviewsWithMetaResponse);
  rpc UpdateReview (UpdateReviewRequest) returns (ReviewResponse);
  rpc DeleteReview (DeleteReviewRequest) returns (DeleteReviewResponse);
  rpc ListReviews (ListReviewsRequest) returns (ListReviewsResponse);
}
